# perfect-cycle

./: Makefile  README.md  pyproject.toml
perfect_cycle/: lib.py  model.py  view.py
tests/: test_unit.py
