[tool.poetry]
name = "perfect-cycle"
version = "0.1.0"
description = ""
authors = ["parfaire <pramudita.santoso@gmail.com>"]
readme = "README.md"
packages = [{include = "perfect_cycle"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
